--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -187,7 +187,7 @@ jobs:
       run: |
         python .ci_support/pyironconfig.py
         bash .ci_support/pip_install.sh
-        coverage run --omit="pyiron_base/_version.py,tests/*" -m unittest discover tests/unit
+        coverage run
         coverage xml
     - name: Upload coverage reports to Codecov
       if: matrix.label == 'linux-64-py-3-13'
