--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
-requires = ["cloudpickle", "executorlib", "h5io_browser", "h5py", "numpy", "monty", "pandas", "psutil", "pyfileindex", "pyiron_dataclasses", "pyiron_snippets", "pysqa", "sqlalchemy", "tables", "tqdm", "traitlets", "setuptools", "versioneer[toml]==0.29"]
-build-backend = "setuptools.build_meta"
+requires = ["cloudpickle", "executorlib", "h5io_browser", "h5py", "numpy", "monty", "pandas", "psutil", "pyfileindex", "pyiron_dataclasses", "pyiron_snippets", "pysqa", "sqlalchemy", "tables", "tqdm", "traitlets", "hatchling==1.27.0", "hatch-vcs==0.5.0"]
+build-backend = "hatchling.build"
 
 [project]
 name = "pyiron_base"
@@ -66,18 +66,27 @@ stats = [
 [project.scripts]
 pyiron = "pyiron_base.cli:main"
 
-[tool.setuptools.packages.find]
-include = ["pyiron_base*"]
+[tool.hatch.build]
+include = [
+    "pyiron_base"
+]
 
-[tool.setuptools.dynamic]
-version = {attr = "pyiron_base.__version__"}
+[tool.hatch.build.hooks.vcs]
+version-file = "pyiron_base/_version.py"
 
-[tool.versioneer]
-VCS = "git"
-style = "pep440-pre"
-versionfile_source = "pyiron_base/_version.py"
-parentdir_prefix = "pyiron_base"
-tag_prefix = "pyiron_base-"
+[tool.hatch.build.targets.sdist]
+include = [
+    "pyiron_base"
+]
+
+[tool.hatch.build.targets.wheel]
+packages = [
+    "pyiron_base"
+]
+
+[tool.hatch.version]
+source = "vcs"
+path = "pyiron_base/_version.py"
 
 [tool.coverage.run]
 omit = ["pyiron_base/_version.py", "tests/*"]
