--- a/.github/workflows/atomistics-compat.yml
+++ b/.github/workflows/atomistics-compat.yml
@@ -47,6 +47,7 @@ jobs:
       run: |
         pip install versioneer[toml]==0.29
         cd ../pyiron_atomistics
+        python .ci_support/pyironconfig.py
         pip install . --no-deps --no-build-isolation
         cd ../pyiron_base
         pip install . --no-deps --no-build-isolation
