--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,7 +72,7 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
+        pip install . --no-deps --no-build-isolation
         python -m unittest discover tests/benchmarks
 
   minimal:
@@ -93,7 +93,7 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
+        pip install . --no-deps --no-build-isolation
         python -m unittest discover tests/unit
 
   notebooks:
@@ -116,8 +116,8 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
-        ./.ci_support/build_notebooks.sh
+        pip install . --no-deps --no-build-isolation
+        bash ./.ci_support/build_notebooks.sh
 
   pip_check:
     needs: [black]
@@ -136,7 +136,7 @@ jobs:
     - name: Pip check
       shell: bash -l {0}
       run: |
-        pip install versioneer[toml]==0.29 tomlkit
+        pip install tomlkit
         python .ci_support/check.py
         cat pyproject.toml
         pip install . --no-deps --no-build-isolation
@@ -184,7 +184,7 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
+        pip install . --no-deps --no-build-isolation
         coverage run
         coverage report
         coverage xml
@@ -212,7 +212,7 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
+        pip install . --no-deps --no-build-isolation
         python -m unittest discover tests/unit
 
   unittest_adis:
@@ -235,7 +235,7 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
+        pip install . --no-deps --no-build-isolation
         cd tests/usecases/ADIS
         export ESPRESSO_PSEUDO=$(pwd)/espresso/pseudo
         papermill notebook.ipynb notebook-out.ipynb -k "python3"
@@ -261,7 +261,7 @@ jobs:
       shell: bash -l {0}
       timeout-minutes: 5
       run: |
-        bash .ci_support/pip_install.sh
+        pip install . --no-deps --no-build-isolation
         sudo apt-get install -y $(cat tests/usecases/NFDI4ING/apt.txt)
         cd tests/usecases/NFDI4ING
         papermill notebook.ipynb notebook.ipynb -k "python3"
