--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -85,7 +85,7 @@ jobs:
     - name: Setup Mambaforge
       uses: conda-incubator/setup-miniconda@v3
       with:
-        python-version: '3.13'
+        python-version: '3.14'
         miniforge-version: latest
         condarc-file: .condarc
         environment-file: .ci_support/environment-mini.yml
@@ -129,7 +129,7 @@ jobs:
     - name: Setup Mambaforge
       uses: conda-incubator/setup-miniconda@v3
       with:
-        python-version: '3.13'
+        python-version: '3.14'
         miniforge-version: latest
         condarc-file: .condarc
         environment-file: .ci_support/environment.yml
@@ -149,12 +149,16 @@ jobs:
       matrix:
         include:
         - operating-system: macos-latest
-          python-version: '3.13'
-          label: osx-64-py-3-13
+          python-version: '3.14'
+          label: osx-64-py-3-14
 
         - operating-system: windows-latest
-          python-version: '3.13'
-          label: win-64-py-3-13
+          python-version: '3.14'
+          label: win-64-py-3-14
+
+        - operating-system: ubuntu-latest
+          python-version: '3.14'
+          label: linux-64-py-3-14
 
         - operating-system: ubuntu-latest
           python-version: '3.13'
@@ -189,7 +193,7 @@ jobs:
         coverage report
         coverage xml
     - name: Upload coverage reports to Codecov
-      if: matrix.label == 'linux-64-py-3-13'
+      if: matrix.label == 'linux-64-py-3-14'
       uses: codecov/codecov-action@v5
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
